# study-leave-doc-generator

./: README.md  pyproject.toml  requirements.txt  study-leave.code-workspace
api/: __init__.py  app.py  build.sample.json  cli.py  routes.py
api/datatypes/: document_inputs.py
api/document/: __init__.py
api/src/: routes.py
api/src/models/: __init__.py  document_inputs.py
api/template/: document.typ  template.typ
api/template/ftl/: en.ftl  it.ftl
web/: package-lock.json  package.json
web/app/components/: document-build.tsx
web/app/components/ui/: select.tsx
web/app/lib/: api.ts
web/app/routes/: home.tsx
